Bug 929430 part 1:  Wrap OggReader.cpp's opus-specific function calls in #ifdef MOZ_OPUS, so that it can build successfully with --disable-opus. r=rillian